Fixed overflow issue of About section by increasing width of paragraphs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ section#intro .intro-text {
 }
 
 .about-content {
-    width: 30%;
+    width: 40%;
     font-size: 18px;
     text-align: justify;
 }
